--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ SECRET_KEY=dummy_key
 POSTGRES_DB=fastapi_db
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_HOST=localhost
+POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 
-MONGO_URI=mongodb://localhost:27017
+MONGO_URI=mongodb://mongo:27017
 GEMINI_API_KEY=dummy_key
